--- a/Website 2.html
+++ b/Website 2.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Welcome to Website 2</h1>
-    <button onclick="location.href='../website1/index.html'">Go to Website 1</button>
+    <button onclick="location.href='../Website 2.html'">Go to Website 1</button>
 </body>
 </html>
