--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Welcome to Website 1</h1>
+    <h2>Made by karthick</h2>
     <button onclick="location.href='./index2.html'">Go to Website 2</button>
 </body>
 </html>
